Works up to 3 waypoints